   from the libssl and libcrypto libraries provided by OpenSSL. This is done so
   that Asterisk can ensure that these functions do *not* get called by any
   modules that are loaded into Asterisk, since they should only be called once
   in any single process. If desired, this feature can be disabled by supplying
   the "--disable-asteriskssl" option to the configure script.

CLI Changes
-------------------
 * mixmonitor list <channel> command will now show MixMonitor ID, and the filenames
   of all running mixmonitors on a channel.
 * The debuglevel of "pri set debug" is now a bitmask ranging from 0 to 15 if
   numeric instead of 0, 1, or 2.

ConfBridge
-------------------
 * Added menu action admin_toggle_mute_participants.  This will mute / unmute
   all non-admin participants on a conference.  The confbridge configuration file
   also allows for the default sounds played to all conference users when this
   occurs to be overriden using sound_participants_unmuted and sound_participants_muted.
 * Added menu action participant_count.  This will playback the number of current
   participants in a conference.
 * Added announcement configuration option to user profile. If set the sound file will
   be played to the user, and only the user, upon joining the conference bridge.

Voicemail
------------------
 * Addition of the VM_INFO function - see Dialplan function changes
 * The imapserver, imapport, and imapflags configuration options can now be
   overriden on a user by user basis.

SIP Changes
-----------
 * Asterisk will no longer substitute CID number for CID name into display
   name field if CID number exists without a CID name. This change improves
   compatibility with certain device features such as Avaya IP500's directory
   lookup service.
 * A new setting for autocreatepeer (autocreatepeer=persistent) allows peers
   created using that setting to not be removed during SIP reload.
 * Add support to realtime for the 'callbackextension' option